--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="village">Village</string>
     <string name="acreage">Acreage</string>
-    <string name="main_crops">MainCropsa</string>
+    <string name="main_crops">Main crops</string>
     <string name="query_hint">Search FPO members by name, crop, village etc</string>
     <string name="membership">Membership</string>
     <string name="profile_image">ProfileImage</string>
