--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,29 @@
     <string name="profile_image">ProfileImage</string>
     <string name="bod">BOD</string>
     <string name="staffs">Staffs</string>
+    <string name="add_member">Add Member</string>
+    <string name="basic_profile">Basic Profile</string>
+    <string name="farm">Farm</string>
+    <string name="live_stock">Live Stock</string>
+    <string name="assests">Assests</string>
+    <string name="house_hold">House Hold</string>
+    <string name="bank">Bank</string>
+    <string name="save"><u>Save</u></string>
+    <string name="_firstname">First Name</string>
+    <string name="_lastname">Last Name</string>
+    <string name="_dob">DOB</string>
+    <string name="_gender">Gender</string>
+    <string name="_address">Address</string>
+    <string name="_district">District</string>
+    <string name="_state">State</string>
+    <string name="_pincode">Pincode</string>
+    <string name="_contact">Contact Phone</string>
+    <string name="_phonenum">Phone num</string>
+    <string name="profile_photo">Profile photo</string>
+    <string name="_smartphone">Smart Phone</string>
+    <string name="choose_file"><u>Choose File</u></string>
+    <string name="_proof">Proof</string>
+    <string name="_address_proof">Address Proof</string>
+    <string name="_identity_proof">Identity Proof</string>
+    <string name="_upload_files">Upload Files</string>
 </resources>
